# cookiecutter-click

./: cookiecutter.json
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: pyproject.toml
