[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}}"]
license = "{{cookiecutter.open_source_license}}"
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.package_name}}/"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.package_name}}/"
documentation = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.package_name}}/"
keywords = ["cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Topic :: Utilities",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
colorama = "^0.4.3"


[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
coverage = {extras = ["toml"], version = "^5.2.1"}

[tool.poetry.scripts]
{{cookiecutter.entry_point}} = '{{cookiecutter.project_slug}}.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
